--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,14 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.squareup.picasso:picasso:2.8'
     
     // Glide for image loading
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+    
+    // OkHttp logging interceptor for debugging
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
     
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
